add config rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,13 @@
 inherit_from: .rubocop_todo.yml
+
+Style/Documentation:
+  Enabled: false
+
+Style/MultilineBlockChain:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 13
