downgrade rubocop to 0.49 :see_no_evil:

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,9 @@ Style/Documentation:
 Style/MultilineBlockChain:
   Enabled: false
 
+Style/HashSyntax:
+  Enabled: false
+
 Metrics/BlockLength:
   Enabled: false
 
